# scratch-nn

./: README.md
newral_network/: CMakeLists.txt  main.cpp
newral_network/abstract/: Neuron.hpp
newral_network/implementation/SigmoidNeuron/: SigmoidNeuron.cpp  SigmoidNeuron.hpp
newral_network/tests/: test_SigmoidNeuron.cpp
